# epitaph

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: config.md
rules/: 66-epitaph.rules.polkit  66-epitaph.rules.udev
shaders/: fragment.glsl  rect.f.glsl  rect.v.glsl  text.v.glsl
src/: config.rs  drawer.rs  geometry.rs  main.rs  panel.rs  reaper.rs  renderer.rs  text.rs  vertex.rs
src/dbus/: mod.rs  modem_manager.rs  network_manager.rs
src/module/: battery.rs  brightness.rs  cellular.rs  clock.rs  date.rs  flashlight.rs  gps.rs  mod.rs  orientation.rs  scale.rs  volume.rs  wifi.rs
src/protocols/: fractional_scale.rs
