[package]
name = "epitaph"
version = "0.1.0"
description = "A Wayland mobile panel"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/epitaph"
rust-version = "1.65.0"
license = "GPL-3.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
calloop = { version = "0.13.0", features = ["signals"] }
calloop-wayland-source = "0.3.0"
catacomb_ipc = { git = "https://github.com/chrisduerr/catacomb", rev = "88facecf54e0cb45be635db16d0ca00399277b5d" }
chrono = { version = "0.4.20", default-features = false, features = ["clock"] }
crossfont = "0.8.0"
glutin = { version = "0.31.3", default-features = false, features = ["egl", "wayland"] }
libc = "0.2.127"
raw-window-handle = "0.5.0"
resvg = { version = "0.41.0", default-features = false }
smithay-client-toolkit = { version = "0.18.1", default-features = false, features = ["xkbcommon"] }
tokio = { version = "1.26.0", features = ["macros"] }
udev = "0.8.0"
wayland-backend = { version = "0.3.3", features = ["client_system"] }
zbus = { version = "4.2.2", default-features = false, features = ["tokio"] }

[build-dependencies]
gl_generator = "0.14.0"
