[package]
name = "epitaph"
version = "1.1.1"
description = "A Wayland mobile panel"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/epitaph"
rust-version = "1.88.0"
license = "GPL-3.0-only"
edition = "2024"

[profile.release]
panic = 'abort'

[dependencies]
calloop = { version = "0.14.0", features = ["signals"] }
calloop-wayland-source = "0.4.0"
catacomb_ipc = { git = "https://github.com/chrisduerr/catacomb", rev = "eb2ebcfeffae11cb7bce6a25940ad0ef792e0cd2" }
chrono = { version = "0.4.20", default-features = false, features = ["clock"] }
configory = { version = "0.6.3", features = ["docgen", "log"] }
crossfont = "0.9.0"
futures-lite = "2.6.0"
glutin = { version = "0.32.1", default-features = false, features = ["egl", "wayland"] }
libc = "0.2.127"
libpulse-binding = "2.30.1"
raw-window-handle = "0.6.2"
resvg = { version = "0.46.0", default-features = false }
serde = { version = "1.0.219", features = ["derive", "rc"] }
smallvec = "1.15.1"
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["xkbcommon"] }
tokio = { version = "1.26.0", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
udev = "0.9.1"
wayland-backend = { version = "0.3.3", features = ["client_system"] }
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }

[build-dependencies]
gl_generator = "0.14.0"
